@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Remove 'explore' mode.
+Andreas Kirschbaum 2009-11-14
+
 Fix formatting of 'hiscore' command output.
 Andreas Kirschbaum 2009-11-13
 
